--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,14 +3,16 @@
 {
     "extends": ["airbnb", "prettier", "prettier/react"],
     "plugins": [
-        "prettier"
+        "prettier",
+        "react"
     ],
     "parser": "babel-eslint",
     "parserOptions": {
-        "ecmaVersion": 2016,
+        "ecmaVersion": 2017,
         "sourceType": "module",
         "ecmaFeatures": {
-            "jsx": true
+            "jsx": true,
+            "js": true
         }
     },
     "env": {
@@ -21,6 +23,36 @@
     "rules": {
         "react/jsx-filename-extension": [1, {
             "extensions": [".js", ".jsx"]
-        }]
+        }],
+        "linebreak-style":"off",
+        "react/jsx-uses-react": "error",
+        "react/jsx-uses-vars": "error",
+        "react/no-unused-state":"warn",
+        "jsx-a11y/label-has-for": [ 2, {
+            "components": [ "Label" ],
+            "required": {
+                "some": [ "nesting", "id" ]
+            },
+            "allowChildren": false
+        }],
+        "jsx-a11y/anchor-is-valid": [ "0", {
+            "components": [ "Link" ],
+            "specialLink": [ "hrefLeft", "hrefRight" ],
+            "aspects": [ "noHref", "invalidHref", "preferButton" ]
+          }],
+        "react/prefer-stateless-function":"off",
+        "no-const-assign": "warn",
+        "no-this-before-super": "warn",
+        "no-undef": "warn",
+        "no-unreachable": "warn",
+        "no-unused-vars": "warn",
+        "valid-typeof": "warn",
+        "import/prefer-default-export":"off",
+        "arrow-body-style":"off",
+        "no-underscore-dangle": 0 ,
+        "react/self-closing-comp":1
+    },
+    "settings": {
+        
     }
 }
