--- a/package.json
+++ b/package.json
@@ -3,19 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
+    "gravatar-url": "^2.0.0",
+    "jwt-decode": "^2.2.0",
     "prettier": "^1.13.5",
+    "prop-types": "^15.6.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-scripts": "1.1.4"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^3.0.1",
+    "semantic-ui-css": "^2.3.2",
+    "semantic-ui-react": "^0.81.1",
+    "validator": "^10.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint":"eslint src"
+    "lint": "eslint src"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
@@ -27,5 +40,6 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-react": "^7.9.1",
     "eslint-plugin-standard": "^3.1.0"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
