--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eslint-plugin-prettier": "^2.6.0",
     "gravatar-url": "^2.0.0",
     "jwt-decode": "^2.2.0",
+    "normalizr": "^3.2.4",
     "prettier": "^1.13.5",
     "prop-types": "^15.6.2",
     "react": "^16.4.0",
